fix: handle img overflow-x

--- a/app/ui/styles/post.module.scss
+++ b/app/ui/styles/post.module.scss
@@ -92,4 +92,7 @@
       }
     }
   }
+  img {
+    width: 100%;
+  }
 }
